--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "Welcome to my blog. It records my life and enjoy it !"
 ---
 
 {% for post in paginator.posts %}
