--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,8 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
-header-img: "img/tag-bg.jpg"
+description: 天赋就是做一件事的时候不会委屈另一件事
+header-img: "img/chwyatt-bg-tag.jpg"
 ---
 
 <!-- Page Header -->
