Update favicon.ico and about.html

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ header-img: "img/chwyatt-bg-about.jpg"
 
     <p>大家好，我是<strong>Chwyatt</strong>，Android程序猿一枚，定位南京。</p>
 
-    <p>爱好：无。 健身算不算...</p>
+    <p>爱好：吃饭，睡觉，健身算不算...</p>
 
     <p>这是我利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的个人博客。我在GitHub主页<a href="https://github.com/chenshifangcheng">👉GitHub·Chwyatt</a> 与 简书主页<a href="https://www.jianshu.com/u/324a0a5a2576">👉陈式方程</a>。如果有什么问题，欢迎探讨~</p>
 
