--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@ header-img: "img/chwyatt-bg-about.jpg"
 ---
 
 <!-- Language Selector -->
-<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
     <option value="1"> 英文 English </option>
-</select> -->
+</select>
 
 <!-- Chinese Version -->
 <div class="zh post-container">
@@ -31,20 +31,19 @@ header-img: "img/chwyatt-bg-about.jpg"
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
+        <li><a href="https://pages.github.com/">GitHub Pages</a></li>
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
 </div>
 
 <!-- English Version -->
-<!-- <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
+<div class="en post-container">
+    <blockquote><p>Make your life a story worth telling.<br>
+    Time really flies.</p></blockquote>
 
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
-
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
+    <p>Hi, I am <strong>Chwyatt</strong>. I am an Android software engineer and currently working in Nanjing.</p>
     
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
+    <p>This is my personal blog, created by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll</a>. My GitHub homepage 👉 <a href="http://github.com/chenshifangcheng">Github·Chwyatt</a>.</p>
 
     <h5>Talks</h5>
 
@@ -52,9 +51,9 @@ header-img: "img/chwyatt-bg-about.jpg"
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://qiubaiying.github.io">BY</a></li>
+    <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
-</div> -->
+</div>
 
 <!-- Handle Language Change -->
 <script type="text/javascript">
